# targetmol

./: .gitignore  LICENSE  README.md  pyproject.toml  targetmol.example.yaml
examples/: README.md
examples/cases/: ligand_based.md  sbdd_pdb_id.md  screen_only.md
examples/inputs/: requests.txt  smiles_examples.txt
examples/results/: README.md
examples/results/ligand_based/: agent_report.txt  final_candidates.smi  iterative_ligand_refinement_public.json  run_metadata_public.json  summary.txt
examples/results/sbdd_pdb_id/: agent_report.txt  final_report_public.json  run_metadata_public.json  summary.txt  top_candidates.csv
examples/results/screen_only/: agent_report.txt  final_report_public.json  run_metadata_public.json  summary.txt  top_candidates.csv
licenses/: DruGUI-LICENSE-PENDING.md
targetmol/: __init__.py  agent_report.py  cli.py  config.py  inputs.py  models.py  molecules.py  pdb_prep.py  provenance.py  reporting.py  request_parser.py  request_understanding.py  router.py  runtime_rdkit.py  screening_inputs.py  shell.py  workflow.py
targetmol/adapters/: __init__.py  drugflow.py
targetmol/generation/: __init__.py  expansion.py  iterative.py  molecular_refinement.py  refinement.py
targetmol/screening/: __init__.py  docking.py  normalize.py  pipeline.py  pipeline_runner.py  properties.py  ranking.py  report.py  types.py
targetmol/target_context/: __init__.py  embedding.py  grounding.py
